--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -52,6 +52,9 @@
 	\part{Diseño y análisis teórico}\label{part:teo}
 		\input{III0_diseno_teo.tex}	% Acá se introduce al cto propuesto y después se analiza
 
+		\section{Etapa de salida}
+			\input{III1_etapa_salida.tex}
+
 %		\section{Polarización}\label{sec:pol}
 %			\input{III1_polarizacion.tex}
 %		
