--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -94,6 +94,12 @@
 			\input{IV2_ruteo.tex}
 
 	\part{Análisis por simulación}\label{part:sim}
+		
+		\section{Etapa de salida}\label{sec:sim_salida}
+			\input{V1_salida.tex}
+
+		\section{Etapa de amplificación de tensión}{\label{sec:sim_vas_pd}
+			\input{V2_vas.tex}
 
 %		\section{Polarización}\label{sec:sim_pol}
 %			\input{V_polarizacion.tex}
