Algunas Simulaciones al Informe

--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -94,43 +94,37 @@
 			\input{IV2_ruteo.tex}
 
 	\part{Análisis por simulación}\label{part:sim}
+		\input{V0_simulaciones.tex}
+
+		\section{Polarización}\label{sec:sim_pol}
+			\input{V1_polarizacion.tex}
+
+		\section{Impedancia de entrada}{\label{sec:sim_zi}
+			\input{V2_zi.tex}
+
+		\section{Impedancia de salida}\label{sec:sim_zo}
+			\input{V3_zo.tex}
+
+		\section{Respuesta en frecuencia}\label{sec:sim_rta_frec}
+			\input{V4_rta_frec.tex}
+
+		\section{Ancho de banda de potencia}\label{sec:sim_bw}
+			\input{V5_bw.tex}
+
+		\section{Respuesta al escalón}\label{sec:sim_escalon}
+			\input{V6_escalon.tex}
+	
+		\section{Margen de fase}\label{sec:sim_fase}
+			\input{V7_fase.tex}
+
+		\section{Distorsión armónica}\label{sec:sim_thd}
+			\input{V8_thd.tex}
 		
-		\section{Etapa de salida}\label{sec:sim_salida}
-			\input{V1_salida.tex}
-
-		\section{Etapa de amplificación de tensión}{\label{sec:sim_vas_pd}
-			\input{V2_vas.tex}
-
-%		\section{Polarización}\label{sec:sim_pol}
-%			\input{V_polarizacion.tex}
-%
-%		\section{Impedancia de entrada}\label{sec:sim_zi}
-%			\input{II2_zi.tex}
-%
-%		\section{Impedancia de salida}\label{sec:sim_zo}
-%			\input{II3_zo.tex}
-%
-%		\section{Respuesta en frecuencia}\label{sec:sim_rta_frec}
-%			\input{II4_rta_frec.tex}
-%
-%		\section{Ancho de banda de potencia}\label{sec:sim_bw}
-%			\input{II5_bw.tex}
-%
-%		\section{Respuesta al escalón}\label{sec:sim_escalon}
-%			\input{II6_escalon.tex}
-%	
-%		\section{Margen de fase}\label{sec:sim_fase}
-%			\input{II7_fase.tex}
-%		\pagebreak
-%		\section{Distorsión armónica}\label{sec:sim_thd}
-%			\input{II8_thd.tex}
-%		
-%		\section{Distorsión por intermodulación}\label{sec:sim_intermod}
-%			\input{II9_intermod.tex}
-%		\pagebreak
-%		\section{Rechazo de Ruido de la Fuente de Alimentación}\label{sec:sim_psnr}
-%			\input{II10_psrr.tex}
-%	\pagebreak
+		\section{Distorsión por intermodulación}\label{sec:sim_intermod}
+			\input{V9_intermod.tex}
+		\section{Rechazo de Ruido de la Fuente de Alimentación}\label{sec:sim_psnr}
+			\input{V10_psrr.tex}
+	\pagebreak
 
 	\part{Construcción del prototipo}\label{part:construccion}
 		\Juan{Ver pdf ''Grupo01\_informe\_final`` como referencia}
