Simulaciones al Informe | Falta Zi y zo

--- a/Informe/Secciones/V1_polarizacion.tex
+++ b/Informe/Secciones/V1_polarizacion.tex
@@ -2,5 +2,9 @@
 	\centering
 	\includegraphics[scale=0.5]{sim_polarizacion.pdf}
 	\caption{Tensiones y corrientes de reposo.}
-	\label{fig:sim_po}
-	\end{figure}
+	\label{fig:sim_pol}
+\end{figure}
+
+
+En la figura \ref{fig:sim_pol} se muestran las tensiones y corrientes en continua, siendo congruentes con los valores esperados.
+
