--- a/Informe/Secciones/V0_simulaciones.tex
+++ b/Informe/Secciones/V0_simulaciones.tex
@@ -1,3 +1,5 @@
+Con el fin de corroborar y ajustar los resultados teóricos obtenidos, se realiza la simulación del circuito mediante \texttt{SPICE Orcad} (ver figura \ref{fig:sim_esquema}).
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.5]{sim_esquema.pdf}
