--- a/Informe/Secciones/V9_intermod.tex
+++ b/Informe/Secciones/V9_intermod.tex
@@ -1,3 +1,5 @@
+\Flor{Rehacer}
+
 Para esta simulación se utilizaron dos señales de entrada de frecuencias muy cercanas, una de \SI{10}{\kHz} y una de \SI{12}{\kHz}, y se mide la distorsión en \SI{11}{\kHz} con los mismos procedimientos de la medición anterior. Los resultados obtenidos se muestran en la tabla \ref{tab.intermod}
 
 \begin{table}[H]
