--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -98,6 +98,9 @@
 
 		\section{Polarización}\label{sec:sim_pol}
 			\input{V1_polarizacion.tex}
+		
+		\section{Compensación}\label{sec:sim_compensacion}
+			\input{V1.1_compensacion.tex}
 
 		\section{Impedancia de entrada}{\label{sec:sim_zi}
 			\input{V2_zi.tex}
