--- a/Informe/Secciones/V9_intermod.tex
+++ b/Informe/Secciones/V9_intermod.tex
@@ -1,18 +1,20 @@
-\Flor{Rehacer}
 
-Para esta simulación se utilizaron dos señales de entrada de frecuencias muy cercanas, una de \SI{10}{\kHz} y una de \SI{12}{\kHz}, y se mide la distorsión en \SI{11}{\kHz} con los mismos procedimientos de la medición anterior. Los resultados obtenidos se muestran en la tabla \ref{tab.intermod}
+Para esta simulación se utilizaron dos señales de entrada superpuestas, una de frecuencia de \SI{100}{\Hz} con amplitud pico \SI{0.4}{\volt} y una de \SI{5}{\kHz} con \SI{0.1}{\volt}, y se mide la distorsión en \SI{5}{\kHz} con los mismos procedimientos de la medición anterior, obteniéndose 
+$$ \mathrm{IMD} = 1,4\% $$
 
-\begin{table}[H]
-	\centering
-	\begin{tabular}{ccccc}
-		\toprule
-\multirow{2}{*}{Frecuencia} & \multicolumn{3}{c}{$P_L$} \\ 
-		\cmidrule{2-4}
-			& 4W & 30W & 42W \\
-		\midrule
-		 \SI{11}{\kHz} & \num{2.14} & \num{2.15} & \num{2.15}\\
-		 \bottomrule
-	\end{tabular}
-	\caption{Valores porcentuales de distorsión de intermodulación para distintos valores de frecuencia y potencias sobre la carga.}
-	\label{tab.intermod}
-\end{table}
+%Los resultados obtenidos se muestran en la tabla \ref{tab.intermod}
+
+%\begin{table}[H]
+%	\centering
+%	\begin{tabular}{ccccc}
+%		\toprule
+%\multirow{2}{*}{Frecuencia} & \multicolumn{3}{c}{$P_L$} \\ 
+%		\cmidrule{2-4}
+%			& 4W & 30W & 42W \\
+%		\midrule
+%		 \SI{11}{\kHz} & \num{2.14} & \num{2.15} & \num{2.15}\\
+%		 \bottomrule
+%	\end{tabular}
+%	\caption{Valores porcentuales de distorsión de intermodulación para distintos valores de frecuencia y potencias sobre la carga.}
+%	\label{tab.intermod}
+%\end{table}
