--- a/Informe/Secciones/III1_etapa_salida.tex
+++ b/Informe/Secciones/III1_etapa_salida.tex
@@ -84,4 +84,11 @@
 	\begin{equation}
 		I_{e,pol} = \frac{ \SI{0.8}{\volt} }{ \SI{500}{\ohm} } = \SI{1.6}{\milli\ampere} \implies \SI{1.28}{\milli\watt}
 	\end{equation}
+	
+	\subsection{Cálculo de disipadores}
+	
+	
+	\Flor{Completar}
+	\subsection{Protección}
+	Se implementó una protección contra cortocircuito de la carga de salida, conformado por los transistores Q52 y Q53.
 
