--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -55,6 +55,9 @@
 		\section{Etapa de salida}
 			\input{III1_etapa_salida.tex}
 
+		\section{Amplificación de tensión}
+			\input{III2_vas.tex}
+			
 %		\section{Polarización}\label{sec:pol}
 %			\input{III1_polarizacion.tex}
 %		
