--- a/Informe/Secciones/I2_requerimientos.tex
+++ b/Informe/Secciones/I2_requerimientos.tex
@@ -1,9 +1,16 @@
 
 
 \begin{itemize}
-	\item Tensión de alimentación $+/- \SI{30}{\volt}$ con una variación de 5V.
+	\item Tensión de alimentación $+/- \SI{30}{\volt}$ con una variación de \SI{5}{\volt}.
 	\item Potencia de salida nominal de \SI{39}{\watt} sobre \SI{8}{\ohm} a \SI{1}{\kilo\hertz} con $THD<0,02\%$.
+	\item Topología de la etapa de salida Clase G alternativa.
 	\item Potencia de salida a \SI{1}{\watt} sobre \SI{8}{\ohm} con $THD<0,01\%$. 
 	\item Respuesta en frecuencia \SI{20}{\hertz} a \SI{20}{\kilo\hertz}.
 	\item Tensión de \textit{offset} en la salida en continua \SI{5}{\milli\volt}
+	\item \textit{Slew Rate} \SI{10}{\volt\per\micro\second}.
+	\item IMD 1\%
+	\item Impedancia de entrada \SI{100}{\kilo\ohm}
+	\item Impedancia de salida del orden de los \SI{}{\milli\ohm}
+	\item Factor de amortiguamiento, del orden de 500.
+	\item Margen de fase mayor que \SI{45}{\degree}.
 \end{itemize}
