--- a/Informe/Secciones/III0_diseno_teo.tex
+++ b/Informe/Secciones/III0_diseno_teo.tex
@@ -1,1 +1,8 @@
-En la figura se muestra el circuito amplificador de potencia completo, donde se han identificado en línea punteada los bloques que conforman el amplificador. Se debe destacar que dicha selección de bloques es aproximada, ya que las etapas se encuentran interreslacionadas, es decir que comparten componentes y una etapa sin la otra podría no operar correctamente. A continuación se detallará el funcionamiento de la implementación de cada bloque, comenzando por la etapa de salida.
+\begin{figure}
+	\centering
+	\includegraphics[scale=0.5]{esquema.pdf}
+	\caption{Circuito completo.}
+	\label{fig.cto_completo}
+	\end{figure}
+
+En la figura \ref{fig.cto_completo} se muestra el circuito amplificador de potencia completo, donde se han identificado en línea punteada los bloques que conforman el amplificador. Se debe destacar que dicha selección de bloques es aproximada, ya que las etapas se encuentran interreslacionadas, es decir que comparten componentes y una etapa sin la otra podría no operar correctamente. A continuación se detallará el funcionamiento de la implementación de cada bloque, comenzando por la etapa de salida.
