--- a/Informe/Secciones/III0_diseno_teo.tex
+++ b/Informe/Secciones/III0_diseno_teo.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
-	\includegraphics[scale=0.5]{esquema.pdf}
+	\includegraphics[scale=0.8,angle=-90]{esquema2.pdf}
 	\caption{Circuito completo.}
 	\label{fig.cto_completo}
 	\end{figure}
