--- a/Informe/Figuras/comparador.tex
+++ b/Informe/Figuras/comparador.tex
@@ -25,6 +25,13 @@
    \putbox{1.64in}{2.58in}{1.20}{Vo'}%
    \putbox{5.18in}{2.58in}{1.20}{Vth'}%
    \putbox{6.76in}{2.33in}{1.20}{Vth}%
+   \putbox{2.76in}{5.04in}{1.20}{56}%
+   \putbox{4.93in}{5.04in}{1.20}{56}%
+   \putbox{1.10in}{2.08in}{1.20}{5,6k}%
+   \putbox{2.06in}{1.70in}{1.20}{1k}%
+   \putbox{5.51in}{1.70in}{1.20}{1k}%
+   \putbox{5.89in}{2.08in}{1.20}{8,2k}%
+   \putbox{3.81in}{0.83in}{1.20}{560}%
    } % close 'parbox'
    } % close 'scalebox'
    \vspace{-\baselineskip} % this is not necessary, but looks better
