--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -127,8 +127,16 @@
 		
 		\section{Distorsión por intermodulación}\label{sec:sim_intermod}
 			\input{V9_intermod.tex}
+
 		\section{Rechazo de Ruido de la Fuente de Alimentación}\label{sec:sim_psnr}
 			\input{V10_psrr.tex}
+
+		\section{Máxima eficiencia del amplificador}\label{sec:max_ef}
+			\input{V11_max_eficiencia.tex}
+
+		\section{Cálculo de Disipadores}\label{sec:sim_disipadores}
+			\input{V12_disipadores.tex}
+
 	\pagebreak
 
 	\part{Construcción del prototipo}\label{part:construccion}
