--- a/Informe/Secciones/III1_etapa_salida.tex
+++ b/Informe/Secciones/III1_etapa_salida.tex
@@ -1,6 +1,6 @@
 	La etapa de salida clase G se caracteriza principalmente por el manejo eficiente de potencia debido a que conmuta la tensión de alimentación entre dos niveles según lo requiera la señal de entrada.
 
-	En la figura se muestra un esquema básico de la topología, denominada Clase G alternativa.  Los transistores $Q_1$ y $Q_2$ conforman la etapa interior que opera en clase B, siendo $Q3$ y $Q4$ los \textit{drivers} y $R1$ la resistencia de emisor compartida. 
+	En la figura \ref{fig.salida} se muestra un esquema básico de la topología, denominada Clase G alternativa.  Los transistores $Q_1$ y $Q_2$ conforman la etapa interior que opera en clase B, siendo $Q3$ y $Q4$ los \textit{drivers} y $R1$ la resistencia de emisor compartida. 
 
 	\begin{figure}[H]
 		\centering
@@ -13,10 +13,18 @@
 
 	De forma análoga funcionan el comparador $C2$, $Q7$, $Q8$ y $D2$ para el semicilo negativo de la señal de entrada.
 
-	Las tensiones $Vbias1$ y $Vbias2$ permiten \textit{prepolarizar} a los transistores $Q1$ y $Q2$ con el fin de atenuar la distorsión de cruce por cero. Se deben ajustar de forma tal que la corriente de la malla de salida sea aproximadamente igual en el colector de ambos transistores ($Q1$ y $Q2$). Asimismo se debe considerar que si $ICQ$ es muy elevada se desperdicia potencia, y si es muy pequeña se obtendrá una distorsión de cruce por cero apreciable. 
+	Sin embargo, la topología propuesta presenta un inconveniente. Cuando $Q_6$ entra en conducción, se produce una alteración repentina en la tensión $V_{CE}$ del transistor de potencia de salida $Q_1$, que por efecto Early también modifica la corriente de colector. Esta alteración afecta la ganancia, produciendo picos de tensión en la señal de salida. Esta alinealidad se elimina al conectar los transistores internos $Q3$ y $Q4$ a la tensión $+V_{ccH}$ y $-V_{ccH}$ respectivamente, según indica la figura \ref{fig.salida_2}.
 
-
+	\begin{figure}[H]
+		\centering
+		\scalebox{0.5}{\input{salida_2}}
+		\caption{Etapa de salida.}
+		\label{fig.salida_2}
+	\end{figure}
+	
 \subsection{Multiplicador de $V_{BE}$}
+
+	Las tensiones $V_{bias1}$ y $V_{bias2}$ permiten \textit{prepolarizar} a los transistores $Q_1$ y $Q_2$ con el fin de atenuar la distorsión de cruce por cero. Se deben ajustar de forma tal que la corriente de la malla de salida sea aproximadamente igual en el colector de ambos transistores ($Q_1$ y $Q_2$). Asimismo se debe considerar que si $I_{CQ}$ es muy elevada se desperdicia potencia, y si es muy pequeña se obtendrá una distorsión de cruce por cero apreciable. Ambas tensiones se implementaron con un multiplicador de $V_{BE}$ cuyo circuito se presenta en la figura \ref{fig.multiplicador}
 
 	\begin{figure}[H]
 		\centering
@@ -25,7 +33,6 @@
 		\label{fig.multiplicador}
 	\end{figure}
 
-	La resistencia $R_{3M}$ se anexa para mejorar la independencia de la tensión $V_{BE}$ con la corriente de polarización.
 
 	\begin{equation}
 		\centering
@@ -38,7 +45,11 @@
 	 	\centering
 		\frac{\SI{2.2}{\volt}}{\SI{0.5}{\volt}} -1 = \frac{R_{1M}}{R_{2M}} \implies \boxed{R_{1M} = \num{3,4} \cdot R_{2M}}
 	\end{equation}
+
 	Se eligen los resistores comerciales $R_{1M} = \SI{3.3}{\kilo\ohm}$, $R_{2M} = \SI{680}{\ohm}$ y un potenciómetro de $\SI{1}{\kilo\ohm}$. 
+
+	La resistencia $R_{3M}$ se anexa para mejorar la independencia de la tensión $V_{BE}$ con la corriente de polarización. Asimismo se agrega un capacitor $C_M$ para no alterar el comportamiento del resto cirucito en señal, es decir que se obtiene una impedancia pequeña para un amplio rango de frecuencias. 
+
 
 \subsection{Fuente de corriente}
 	El valor mínimo de la corriente necesaria para la etapa de salida se determina con el caso de máxima corriente de salida $I_{o,max} = \SI{26}{\volt}/ \SI{8}{\ohm} = \SI{3.25}{\ampere}$. Al tratarse de transistores de potencia, el factor $\beta$ es aproximadamente $\beta = 30$, por lo que la corriente de base en $Q1$ sería $I_{B,Q1} \approx \SI{110}{\milli\ampere}$. Dicha corriente es entregada por $Q_2$, siendo la corriente de base $I_{B,Q2} \approx \SI{110}{\milli\ampere}/50 \approx \SI{2}{\milli\ampere}$. A su vez la fuente polariza la etapa amplificadora de tensión (VAS), por lo que se considerará al menos el doble de dicha corriente. Se propone $I_{pol} = \SI{5}{\milli\ampere}$.
@@ -50,9 +61,18 @@
 		\label{fig.fte}
 	\end{figure}
 
+\begin{equation}
+	\centering
+	R_1 = \frac{\SI{30}{\volt} - V_{BE, <on>} }{ I_{pol} }
+	\label{ec.ipol}
+\end{equation}
+
+La corriente de polaización queda determinada por la resistencia $R_1$ de la expresión \ref{ec.ipol}. Considerando un $V_{BE,on} = \SI{0.5}{\volt}$ se obtiene $R_1 = \SI{100}{\ohm}$. Por otra parte se despreció la caída de tensión por $R_2$. Dicha resistencia se anexa con el fin de limitar la corriente de base que pasa de un transistor a otro.
 
 
 \subsection{Comparadores}
+
+	Las señales de música poseen picos mucho mayores que el promedio, estando la mayor parte del tiempo en niveles bajos, por lo que se propone un umbral de tensión de 40\% con respecto a la tensión máxima de alimentación, es decir que $V_{ccL} = \pm \SI{12}{\volt}$, $VccH = \pm \SI{30}{\volt}$. 
 
 	\begin{figure}[H]
 		\centering
@@ -61,7 +81,7 @@
 		\label{fig.comparador}
 	\end{figure}
 
-	Se propone la configuración de par diferencial de la figura para implementar los comparadores. Se utiliza una fuente de corriente espejo para lograr mayor estabilidad. En vez de comparar con la señal proveniente de la etapa VAS, se compara con la señal de salida $V_{o}$ para evitar cargar la VAS con la resistencia de entrada que presenta el par diferencial ($2\cdot r_\pi$). La señal de salida no resulta alterada por tratarse de un colector común que es separador de impedancias.
+	Se propone la configuración de par diferencial de la figura \ref{fig.comparador} para implementar los comparadores. Se utiliza una fuente de corriente espejo para lograr mayor estabilidad. En vez de comparar con la señal proveniente de la etapa VAS, se compara con la señal de salida $V_{o}$ para evitar cargar la VAS con la resistencia de entrada que presenta el par diferencial ($2\cdot r_\pi$). La señal de salida no resulta alterada por tratarse de un colector común que es separador de impedancias.
 	Por otra parte, es difícil lograr en la práctica que los transistores que conforman el par diferencial manejen una excursión de tensión de hasta \SI{30}{\volt}, por lo que se utiliza un divisor resistivo en ambas bases de los transistores para atenuar la amplitud de tensión. Es conveniente que la tensión de referencia $Vth'$ sea levemente menor que la prevista con el fin de contrarrestar el retardo de tiempo del comparador.
 
 \begin{equation}
@@ -84,9 +104,23 @@
 	\begin{equation}
 		I_{e,pol} = \frac{ \SI{0.8}{\volt} }{ \SI{500}{\ohm} } = \SI{1.6}{\milli\ampere} \implies \SI{1.28}{\milli\watt}
 	\end{equation}
+
+Finalmente, los valores comerciales de resistores que se eligieron se muestran en el esquema \ref{fig.comparador}.	
 	
-	\subsection{Cálculo de disipadores}
-	
+\subsection{Cálculo de disipadores}
+
+\subsection{Máxima eficiencia del amplificador}
+
+
+La eficiencia de un circuito se define como la relación entre la potencia promedio entregada a la carga (PL) y la potencia consumida por la fuente de alimentación ($P_{fuente}$). El cálculo es análogo al de clase B, salvo que en un clase G, la disipación de potencia es compartida entre dos transistores, y la disipación en los transistores externos es cero cuando no se supera la tensión umbral.
+
+\begin{equation}
+	\centering
+	\nu = \frac{P_L}{P_{fuente}} = \frac{\pi}{4} \cdot \frac{\hat{V}_o}{V_{CC}} = \frac{\pi}{4} \cdot \frac{26}{30}= \boxed{68\%}
+\end{equation}
+
+Siendo $ \hat{V}_o$ máxima tensión de salida sin que haya recorte.
+
 	
 	\Flor{Completar}
 	\subsection{Protección}
