--- a/Xcircuit/fte.tex
+++ b/Xcircuit/fte.tex
@@ -9,13 +9,17 @@
    \parbox{3.85938in}{
    \includegraphics[scale=1]{fte}\\
    % translate x=384 y=372 scale 0.38
-   \putbox{0.43in}{1.04in}{1.20}{$20 k\Omega$}%
+   \putbox{0.43in}{0.91in}{1.20}{$20 k\Omega$}%
    \putbox{2.56in}{2.83in}{1.20}{$120 \Omega$}%
-   \putbox{1.06in}{2.12in}{1.20}{$2,2 k\Omega$}%
+   \putbox{1.47in}{2.54in}{1.20}{$2,2 k\Omega$}%
    \putbox{2.76in}{1.16in}{1.20}{$5 mA$}%
    \putbox{0.97in}{3.74in}{1.20}{VccH+}%
    \putbox{1.97in}{2.87in}{1.20}{R1}%
-   \putbox{1.22in}{2.62in}{1.20}{R2}%
+   \putbox{1.01in}{2.54in}{1.20}{R2}%
+   \putbox{2.81in}{0.83in}{1.20}{$I_{pol}$}%
+   \putbox{0.51in}{2.87in}{1.20}{$V_{BE}$}%
+   \putbox{1.18in}{1.83in}{1.20}{$V_{BE}$}%
+   \putbox{0.72in}{2.16in}{1.20}{\textcolor{blue}{$30V-V_{BE}$}}%
    } % close 'parbox'
    } % close 'scalebox'
    \vspace{-\baselineskip} % this is not necessary, but looks better
