--- a/Informe/Secciones/I2_requerimientos.tex
+++ b/Informe/Secciones/I2_requerimientos.tex
@@ -1,7 +1,7 @@
-
+El amplificador de audio a diseñar debe cumplir las siguientes especificaciones:
 
 \begin{itemize}
-	\item Tensión de alimentación $+/- \SI{30}{\volt}$ con una variación de \SI{5}{\volt}.
+	\item Tensión de alimentación $\pm \SI{30}{\volt}$ con una variación de \SI{5}{\volt}.
 	\item Potencia de salida nominal de \SI{39}{\watt} sobre \SI{8}{\ohm} a \SI{1}{\kilo\hertz} con $THD<0,02\%$.
 	\item Topología de la etapa de salida Clase G alternativa.
 	\item Potencia de salida a \SI{1}{\watt} sobre \SI{8}{\ohm} con $THD<0,01\%$. 
