--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -32,23 +32,23 @@
 
 	\part{Introducción}\label{part:intro}
 
-		\section{Objetivos}\label{sec:obj}
-			\input{I1_objetivos.tex}
+	%	\section{Objetivos}\label{sec:obj}
+		%	\input{I1_objetivos.tex}
 
 		\section{Requerimientos}\label{sec:req}
 			\input{I2_requerimientos.tex}
 
-	\part{Diseño conceptual}\label{part:concept}
-
-		\section{Alternativas de diseño}\label{sec:alt}
-			\input{II1_alternativas.tex}
-
-		\section{Diagrama en bloques}\label{sec:bloques}
-			\input{II2_bloques.tex}
-
-		\section{Funcionamiento general}\label{sec:func_gral} % Acá se explican los bloques
-			\input{II3_func_gral.tex}
-
+%	\part{Diseño conceptual}\label{part:concept}
+%
+%		\section{Alternativas de diseño}\label{sec:alt}
+%			\input{II1_alternativas.tex}
+%
+%		\section{Diagrama en bloques}\label{sec:bloques}
+%			\input{II2_bloques.tex}
+%
+%		\section{Funcionamiento general}\label{sec:func_gral} % Acá se explican los bloques
+%			\input{II3_func_gral.tex}
+	\pagebreak
 	\part{Diseño y análisis teórico}\label{part:teo}
 		\input{III0_diseno_teo.tex}	% Acá se introduce al cto propuesto y después se analiza
 
@@ -139,20 +139,20 @@
 
 	\pagebreak
 
-	\part{Construcción del prototipo}\label{part:construccion}
-		\Juan{Ver pdf ''Grupo01\_informe\_final`` como referencia}
+%	\part{Construcción del prototipo}\label{part:construccion}
+%		\Juan{Ver pdf ''Grupo01\_informe\_final`` como referencia}
 %		\input{VI}
 
-	\part{Medición del prototipo}\label{part:mediciones}
+%	\part{Medición del prototipo}\label{part:mediciones}
 %		\input{VII}
 
 	\part{Conclusiones}\label{part:conclusiones}
 		\input{VIII_conclusiones.tex}
 
-	\part{Bibliografía}\label{part:bibliografia}
-		\input{IX_bibliografia.tex}
+%	\part{Bibliografía}\label{part:bibliografia}
+%		\input{IX_bibliografia.tex}
 
-	\appendix
-	\section{Listado de componentes}
-		\input{A_listado_comp.tex}
+%	\appendix
+%	\section{Listado de componentes}
+%		\input{A_listado_comp.tex}
 \end{document}
