--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -38,13 +38,13 @@
 		\section{Requerimientos}\label{sec:req}
 			\input{I2_requerimientos.tex}
 
-%	\part{Diseño conceptual}\label{part:concept}
+	\part{Diseño conceptual}\label{part:concept}
 %
 %		\section{Alternativas de diseño}\label{sec:alt}
 %			\input{II1_alternativas.tex}
 %
-%		\section{Diagrama en bloques}\label{sec:bloques}
-%			\input{II2_bloques.tex}
+		\section{Diagrama en bloques}\label{sec:bloques}
+			\input{II2_bloques.tex}
 %
 %		\section{Funcionamiento general}\label{sec:func_gral} % Acá se explican los bloques
 %			\input{II3_func_gral.tex}
@@ -136,7 +136,8 @@
 
 		\section{Cálculo de Disipadores}\label{sec:sim_disipadores}
 			\input{V12_disipadores.tex}
-
+		\section{Resultados}
+			\input{VIII1_resultados.tex}
 	\pagebreak
 
 %	\part{Construcción del prototipo}\label{part:construccion}
