--- a/Informe/config.tex
+++ b/Informe/config.tex
@@ -6,7 +6,7 @@
 % Al comienzo de un TP se debe modificar los argumentos de los comandos
 
 \providecommand{\myTitle}{PROYECTO FINAL}
-\providecommand{\mySubtitle}{Amplificador de audio}
+\providecommand{\mySubtitle}{Amplificador de audio de potencia Clase G alternativa}
 
 \providecommand{\mySubject}{Diseño de Circuitos Electrónicos (86.10)}
 \providecommand{\myKeywords}{UBA, Ingeniería, C2}
